2011-04-14  Paul Eggert  <eggert@cs.ucla.edu>

	* xsettings.c, xsettings.h (xsettings_get_system_normal_font):
	Define only if USE_LUCID.

	* xrdb.c (x_customization_string, x_rm_string): Now static.

	* xmenu.c (x_menu_wait_for_event): Export only if USE_MOTIF.
	* xterm.h (x_menu_wait_for_event): Declare only if USE_MOTIF.

	* xdisp.c (draw_row_with_mouse_face): Now static.
	* dispextern.h (draw_row_with_mouse_fave): Remove decl.

	* window.h (check_all_windows): Mark externally visible.

	* window.c (window_deletion_count): Now static.

	* undo.c: Make symbols static if they're not exported.
	(last_undo_buffer, last_boundary_position, pending_boundary):
	Now static.

	* textprop.c (interval_insert_behind_hooks): Now static.
	(interval_insert_in_front_hooks): Likewise.

	* term.c: Make symbols static if they're not exported.
	(tty_turn_off_highlight, get_tty_terminal, max_frame_cols):
	(max_frame_lines, tty_set_terminal_modes):
	(tty_reset_terminal_modes, tty_turn_off_highlight):
	(get_tty_terminal): Now static.
	(term_mouse_moveto): Do not define if HAVE_WINDOW_SYSTEM.
	* termhooks.h (term_mouse_moveto): Do not declare if
	HAVE_WINDOW_SYSTEMM.
	* dispextern.h (tty_set_terminal_modes, tty_reset_terminal_modes):
	(tty_turn_off_highlight, get_tty_terminal): Remove decls.

	* sysdep.c: Make symbols static if they're not exported.
	(emacs_get_tty, emacs_set_tty, old_fcntl_flags, old_fcntl_owner):
	Now static.
	(sigprocmask_set, full_mask): Remove; unused.
	(wait_debugging): Mark as visible.
	* syssignal.h (SIGFULLMASK, full_mask): Remove decls.
	* systty.h (emacs_get_tty, emacs_set_tty): Remove decls.

	* syntax.c (syntax_temp): Define only if !__GNUC__.

	* sound.c (current_sound_device, current_sound): Now static.

	* search.c (searchbufs, searchbuf_head): Now static.

	* scroll.c (scroll_cost): Remove; unused.
	* dispextern.h (scroll_cost): Remove decl.

	* region-cache.h (pp_cache): Mark as externally visible.
